# remove-spikes

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: spiky-polygons.gpkg  vertex-properties.ipynb
src/removespikes/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
