[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "removespikes"
version = "0.0.1"
authors = [
  { name="Pablo Marques", email="pahbloo@gmail.com" },
]
description = "A tool to remove spikes from polygons"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pahbloo/remove-spikes"
Issues = "https://github.com/pahbloo/remove-spikes/issues"

[tool.ruff]
line-length = 79